cmake_minimum_required(VERSION 3.24)
project(OnyxSim)
FIND_PACKAGE(Boost 1.81 COMPONENTS thread log log_setup)
include_directories(${Boost_INCLUDR_DIR})
add_executable(OnyxSim main.cpp Memory/Local/LinearMemory/LinearMemory.cpp Memory/Local/LinearMemory/LinearMemory.h Memory/Local/VirtualMemory/VirtualMemory.cpp Memory/Local/VirtualMemory/VirtualMemory.h  Processes/Process.cpp Processes/Process.h CPU/Onyx1L/Onyx1CPUCore/Onyx1L.cpp CPU/Onyx1L/Onyx1CPUCore/Onyx1L.h IO/OnyxNet/OnyxNet.cpp IO/OnyxNet/OnyxNet.h Memory/Local/VirtualMemory/Swapper.cpp Memory/Local/VirtualMemory/Swapper.h Configuration/ConfigParameters.cpp Configuration/ConfigParameters.h IO/IOInterface.cpp IO/IOInterface.h BIOS/BIOSInterface.cpp BIOS/BIOSInterface.h Monitor/MonitorInterface.cpp Monitor/MonitorInterface.h Harness/Harness.cpp Harness/Harness.h BIOS/Timer.cpp BIOS/Timer.h Snarky/SnarkyBootup.cpp Snarky/SnarkyBootup.h CPU/Onyx1B/Onyx1BCPUCore/Onyx1B.cpp CPU/Onyx1B/Onyx1BCPUCore/Onyx1B.h CPU/Onyx1B/Onyx1BCPUCore/Onyx1B.h CPU/Onyx1B/Onyx1BCPUCore/Onyx1B.h Memory/MemoryConstants.h CPUClock/CoreClock.cpp CPUClock/CoreClock.h CPU/CPU.cpp CPU/CPU.h)
target_link_libraries(OnyxSim LINK_PUBLIC ${Boost_LIBRARIES})